# sensor_converter

./: CMakeLists.txt  package.xml
src/: realsense_to_velodyne.cpp  rfans_to_velodyne.cpp
